fixed bookingForm modal closing on mobile when click input in form

--- a/src/components/styles/Footer.module.scss
+++ b/src/components/styles/Footer.module.scss
@@ -70,7 +70,7 @@
 
         button {
           display: block;
-          width: fit-content;
+          width: 100%;
           margin-inline: auto 0;
           border-radius: 4px;
           padding: 0.75em 1.25em;
@@ -80,6 +80,10 @@
           margin-top: 0.5em;
           height: inherit;
           box-shadow: none;
+
+          @media (min-width: 980px) {
+            width: fit-content;
+          }
 
           &::after {
             display: none;
