--- a/src/components/styles/TourDetails.module.scss
+++ b/src/components/styles/TourDetails.module.scss
@@ -229,7 +229,7 @@
   }
 }
 
-#formModal {
+.formModal {
   display: grid;
   justify-content: center;
   align-items: center;
